--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="color-scheme" content="light dark" />
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
         <style id="reset-css">
             @layer figreset, figoverridable, reset, theme, base, figutils, components, utilities;
