fix mobile menu showing on load

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <meta name="color-scheme" content="light dark" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <meta charset="UTF-8" />
 
         <style id="reset-css">
             @layer figreset, figoverridable, reset, theme, base, figutils, components, utilities;
@@ -264,10 +265,7 @@
                                             </svg>
                                         </button>
                                     </div>
-                                    <div
-                                        id="mobile-menu"
-                                        class="md:hidden pb-4"
-                                    >
+                                    <div id="mobile-menu" class="hidden pb-4">
                                         <div class="flex flex-col space-y-2">
                                             <button
                                                 class="text-left px-4 py-2 text-gray-300 hover:bg-gray-800"
